docs: add documentation for Delete tags
